--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,21 +38,31 @@ dependencies:
   cached_network_image:
   flutter_screenutil:
   get:
+  image_picker:
+  pdf:
   external_path:
   path_provider:
   excel:
   epub_view:
+  flutter_rating_bar: ^4.0.1
+  hive: ^2.2.3
+  hive_flutter:
   document_viewer: ^0.0.1
   provider:
+  image_crop_plus: ^1.0.0
   fluttertoast:
   permission_handler:
   device_info_plus:
+  url_launcher:
+  share_plus:
+  camera:
   flutter_svg:
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  hive_generator:
+  build_runner:
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
